# ds-2-assignment

./: .gitignore  README.md  analyses.ipynb  compile_figures.py  experiment.py  gpu_experiment.py  graph.py  main.py  requirements.txt  viz.py
cuda/: .gitignore  CMakeLists.txt  average_path_length.cu  average_path_length.h  clean_distances_matrix.cu  common.h  distances_kernel.cu  kernels.cu  main.cu  reduceNeighbored.cu  reduceUnrollWarps8.cu  reduceUnrolling2.cu  reduceUnrolling4.cu  test.cu
profiler snapshots/: cpu.pstat  runs on gpu.pstat
report/: biblio.bib  report.tex
runs/: cyclon geo 1000 100 10 1 0.5 0.csv  cyclon geo 1000 100 10 1 0.75 0.csv  cyclon geo 1000 100 10 1 0.95 0.csv  cyclon geo 1000 100 10 10 0.5 0.csv  cyclon geo 1000 100 10 10 0.75 0.csv  cyclon geo 1000 100 10 10 0.95 0.csv  cyclon geo 1000 100 10 4 0.5 0.csv  cyclon geo 1000 100 10 4 0.75 0.csv  cyclon geo 1000 100 10 4 0.95 0.csv  cyclon geo 1000 100 15 1 0.5 0.csv  cyclon geo 1000 100 15 1 0.75 0.csv  cyclon geo 1000 100 15 1 0.95 0.csv  cyclon geo 1000 100 15 10 0.5 0.csv  cyclon geo 1000 100 15 10 0.75 0.csv  cyclon geo 1000 100 15 10 0.95 0.csv  cyclon geo 1000 100 15 4 0.5 0.csv  cyclon geo 1000 100 15 4 0.75 0.csv  cyclon geo 1000 100 15 4 0.95 0.csv  cyclon geo 1000 100 6 1 0.5 0.csv  cyclon geo 1000 100 6 1 0.75 0.csv  cyclon geo 1000 100 6 1 0.95 0.csv  cyclon geo 1000 100 6 10 0.5 0.csv  cyclon geo 1000 100 6 10 0.75 0.csv  cyclon geo 1000 100 6 10 0.95 0.csv  cyclon geo 1000 100 6 4 0.5 0.csv  cyclon geo 1000 100 6 4 0.75 0.csv  cyclon geo 1000 100 6 4 0.95 0.csv  (+407 more)
(+33 files in other folders)
